--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                   <h3>Indian Institute of Information Technology Design and Manufacturing Jabalpur
 </h3>
-                  <p class="info">B.Tech in Computer Engineering <span>&bull;</span> <em class="date">May 2015</em></p>
+                  <p class="info">B.Tech in Computer Engineering <span>&bull;</span> <em class="date">2015_Present</em></p>
 
                   <p>
 		  
