--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 					    <li><span class="bar-expand ai"></span><em>Scikit_learn</em></li>
 					    <li><span class="bar-expand ai"></span><em>Pandas</em></li>
 						 <li><span class="bar-expand ai"></span><em>Numpy</em></li>
+					    <li><span class="bar-expand ai"></span><em>Javascript</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
