--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 					    <li><span class="bar-expand ai"></span><em>Pandas</em></li>
 						 <li><span class="bar-expand ai"></span><em>Numpy</em></li>
 					    <li><span class="bar-expand ai"></span><em>Javascript</em></li>
+					   <li><span class="bar-expand python"></span><em>Matlab</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -364,7 +365,7 @@
                   				<p class="info">My Programming Profile</p>
 
                   				<p>
-		   				I am doing   programming from  1 years of my undergrad studies. You can check my codechf profile here. <a href="https://www.codechef.com/users/mafhh">Click Here</a>
+		   				I am doing   programming from  2 years of my undergrad studies. You can check my codechf profile here. <a href="https://www.codechef.com/users/mafhh">Click Here</a>
                   				</p>
 
                				</div>
