--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 						 <li><span class="bar-expand ai"></span><em>Numpy</em></li>
 					    <li><span class="bar-expand ai"></span><em>Javascript</em></li>
 					   <li><span class="bar-expand python"></span><em>Matlab</em></li>
+					   <li><span class="bar-expand python"></span><em>PHP</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
